-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: core-svc
-
b29
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8084978 | emb-9 | Dmitriy Samersoff | P3 | Resolved | Fixed | team |
| JDK-8163672 | 8u121 | Dmitriy Samersoff | P3 | Resolved | Fixed | b01 |
| JDK-8157093 | 8u112 | Dmitriy Samersoff | P3 | Resolved | Fixed | b01 |
| JDK-8167798 | emb-8u121 | Dmitriy Samersoff | P3 | Resolved | Fixed | b01 |
From the run:
----------System.out:(117/6680)----------
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=39934,server=y,suspend=n,timeout=0,mutf8=y,quiet=y,stdalloc=y,strict=n HelloWorld
--- Return code was:
0
--- Return stdout was:
Hello, world!
--- Return stderr was:
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=39934,server=y,suspend=n,timeout=200000,mutf8=n,quiet=n,stdalloc=n,strict=y HelloWorld
--- Return code was:
0
--- Return stdout was:
Listening for transport dt_socket at address: 39934
Hello, world!
--- Return stderr was:
Testing invalid address string
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=:,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:abc,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:65536,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:65F,server=y,suspend=n HelloWorld
----------System.err:(0/0)----------
----------rerun:(22/2064)*----------
'DISPLAY=$DISPLAY_SITE' \\
GNOME_DESKTOP_SESSION_ID=this-is-deprecated \\
HOME=/export/local/localhome/root \\
JTREG_HOME=/export/local/aurora/sandbox/sca/vmsqe/tool/jtreg/execution/ \\
LANG=C \\
PATH=/bin:/usr/bin \\
TZ=UTC \\
CLASSPATH=/export/local/aurora/sandbox/sca/vmsqe/tool/jtreg/execution/lib/javatest.jar:/export/local/aurora/sandbox/sca/vmsqe/tool/jtreg/execution/lib/jtreg.jar:/export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi:/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/com/sun/jdi:/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/lib/tools.jar \\
/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/bin/java \\
-Dtest.vm.opts=-d64 \\
-Dcompile.jdk=/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64 \\
-Dtest.src.path=/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/com/sun/jdi \\
-Dtest.src=/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/com/sun/jdi \\
-Dtest.tool.vm.opts=-J-d64 \\
-Dtest.class.path=/export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi \\
-Dtest.timeout.factor=8.0 \\
-Dtest.classes=/export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi \\
-Dtest.jdk=/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64 \\
-Dtest.java.opts='-Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions' \\
-Dtest.compiler.opts= \\
-d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions \\
com.sun.javatest.regtest.MainWrapper /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi/OptionTest.jta
result: Error. Program `/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/bin/java' interrupted! (timed out?)
test result: Error. Program `/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/bin/java' interrupted! (timed out?)
ILW=MLH=P4
----------System.out:(117/6680)----------
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=39934,server=y,suspend=n,timeout=0,mutf8=y,quiet=y,stdalloc=y,strict=n HelloWorld
--- Return code was:
0
--- Return stdout was:
Hello, world!
--- Return stderr was:
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=39934,server=y,suspend=n,timeout=200000,mutf8=n,quiet=n,stdalloc=n,strict=y HelloWorld
--- Return code was:
0
--- Return stdout was:
Listening for transport dt_socket at address: 39934
Hello, world!
--- Return stderr was:
Testing invalid address string
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=:,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:abc,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:65536,server=y,suspend=n HelloWorld
--- Return code was:
6
--- Return stdout was:
FATAL ERROR in native method: JDWP No transports initialized, jvmtiError=AGENT_ERROR_TRANSPORT_INIT(197)
Current thread is 2
Dumping core ...
--- Return stderr was:
ERROR: transport error 103: invalid port number specified
ERROR: JDWP Transport dt_socket failed to initialize, TRANSPORT_INIT(510)
JDWP exit error AGENT_ERROR_TRANSPORT_INIT(197): No transports initialized [debugInit.c:730]
vmOpts: -d64
javaOpts: -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions
runCommand method about to execute: /export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/jre/bin/java -classpath /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi -d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -agentlib:jdwp=transport=dt_socket,address=localhost:65F,server=y,suspend=n HelloWorld
----------System.err:(0/0)----------
----------rerun:(22/2064)*----------
'DISPLAY=$DISPLAY_SITE' \\
GNOME_DESKTOP_SESSION_ID=this-is-deprecated \\
HOME=/export/local/localhome/root \\
JTREG_HOME=/export/local/aurora/sandbox/sca/vmsqe/tool/jtreg/execution/ \\
LANG=C \\
PATH=/bin:/usr/bin \\
TZ=UTC \\
CLASSPATH=/export/local/aurora/sandbox/sca/vmsqe/tool/jtreg/execution/lib/javatest.jar:/export/local/aurora/sandbox/sca/vmsqe/tool/jtreg/execution/lib/jtreg.jar:/export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi:/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/com/sun/jdi:/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/lib/tools.jar \\
/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/bin/java \\
-Dtest.vm.opts=-d64 \\
-Dcompile.jdk=/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64 \\
-Dtest.src.path=/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/com/sun/jdi \\
-Dtest.src=/export/local/aurora/sandbox/sca/vmsqe/testbase/jtreg/nightly/comp_baseline/JT_JDK/test/com/sun/jdi \\
-Dtest.tool.vm.opts=-J-d64 \\
-Dtest.class.path=/export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi \\
-Dtest.timeout.factor=8.0 \\
-Dtest.classes=/export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi \\
-Dtest.jdk=/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64 \\
-Dtest.java.opts='-Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions' \\
-Dtest.compiler.opts= \\
-d64 -Xmixed -server -d64 -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -ea -esa -XX:-TieredCompilation -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions \\
com.sun.javatest.regtest.MainWrapper /export/local/aurora/sandbox/results/workDir/classes/10/com/sun/jdi/OptionTest.jta
result: Error. Program `/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/bin/java' interrupted! (timed out?)
test result: Error. Program `/export/local/aurora/sandbox/sca/vmsqe/jdk/nightly/fastdebug/comp_baseline/solaris-amd64/bin/java' interrupted! (timed out?)
ILW=MLH=P4
- backported by
-
JDK-8084978 com/sun/jdi/OptionTest.java test times out again
-
- Resolved
-
-
JDK-8157093 com/sun/jdi/OptionTest.java test times out again
-
- Resolved
-
-
JDK-8163672 com/sun/jdi/OptionTest.java test times out again
-
- Resolved
-
-
JDK-8167798 com/sun/jdi/OptionTest.java test times out again
-
- Resolved
-
- relates to
-
JDK-6694099 Hotspot vm_exit_out_of_memory should dump core
-
- Closed
-