8049226: com/sun/jdi/OptionTest.java test times out again

Don't call jni_FatalError if transport initialization fails

Reviewed-by: sspitsyn, sla